<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/register_img"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:src="@drawable/creators_logo"
            app:layout_constraintBottom_toTopOf="@+id/input_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/litpro_logo" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@color/soft_white"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/input_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_img"

            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@color/soft_white"
            android:hint="@string/field_password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/input_password_confirm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />


        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/soft_white"
            android:hint="@string/field_password_confirmation"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/input_first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <EditText
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@color/soft_white"
            android:hint="@string/field_first_name"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/input_last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password_confirm" />

        <EditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@color/soft_white"
            android:hint="@string/field_last_name"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_first_name" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_main_drawable"
            android:text="@string/field_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password_confirm" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="115dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>