<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launch_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:fillViewport="true"
    tools:context=".ui.LauncherFragment">


    <View
        android:id="@+id/focusable_view"
        android:layout_width="0.5dp"
        android:layout_height="0.5dp"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="true" />


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/creators_logo"
        android:contentDescription="@string/litpro_logo" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:padding="30dp"
        android:text="@string/text_login"
        android:visibility="gone"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="30dp"
        android:text="@string/text_register"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:visibility="gone"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="151dp"
        android:paddingLeft="30dp"
        android:padding="30dp"
        android:paddingRight="30dp"
        android:text="[ begin ]"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>