<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <View
        android:id="@+id/focusable_view"
        android:layout_width="0.5dp"
        android:layout_height="0.5dp"
        android:focusableInTouchMode="true">

    </View>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/feed_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/linked_athletes_rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey1"
            android:elevation="15dp"
            android:overScrollMode="always" />

        <!-- START Views displayed if feed null or empty -->
        <androidx.cardview.widget.CardView
            android:id="@+id/getting_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:elevation="6dp"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/getting_started_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/link_a_polar_or_garmin_account_to_get_started"
                    android:textSize="18sp"
                    app:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/getting_started_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/getting_started_title"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:text="@string/ride_with_gps_and_your_sessions_will_appear_here"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/getting_started_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/getting_started_title"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/getting_started_button"
                    android:layout_width="140dp"
                    android:layout_height="33dp"
                    android:background="@drawable/animated_red_button"
                    android:text="@string/link_gps_watch"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto_bold"
                    app:layout_constraintBottom_toBottomOf="@id/getting_started_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/getting_started_title"
                    app:layout_constraintTop_toTopOf="@id/getting_started_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- END Views displayed if feed null or empty -->

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/feed_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>